# pypirc_gen

./: LICENSE.md  README.md  gui.py  pyproject.toml  requirements.txt
